classic Stack problem

--- a/020_Valid Parentheses.ipynb
+++ b/020_Valid Parentheses.ipynb
@@ -29,7 +29,9 @@
     "```\n",
     "Input: \"(]\"\n",
     "Output: false\n",
-    "```"
+    "```\n",
+    "\n",
+    "**Good Explaination for this problem in YouTube:**[The Balanced Parentheses Problem - Classic Stack Problem (\"Valid Parentheses\" on Leetcode)](https://www.youtube.com/watch?v=CCyEXcNamC4)"
    ]
   },
   {
