--- a/069_Sqrt(x).ipynb
+++ b/069_Sqrt(x).ipynb
@@ -30,9 +30,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=font-size:1.2em>\n",
-    "Explaination for the following solution is the equation below:\n",
-    "</div>\n",
+    "\n",
+    "## Explaination for the following solution is the equation below:\n",
     "\n",
     "$$\n",
     "x_{k+1} = \\left[\\frac{1}{2} \\left( x_k + \\frac{n}{x_k} \\right) \\right]\n",
