--- a/062_Unique Paths.ipynb
+++ b/062_Unique Paths.ipynb
@@ -46,9 +46,12 @@
     "        :type n: int\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
-    "        path = [[1]*n]*m\n",
+    "#         path = [[1]*n]*m\n",
+    "        path = [[0 for _ in range(n)] for _in range(m)]\n",
     "        for i in range(1,m):\n",
     "            for j in range(1,n):\n",
+    "                if i == 0 and j == 0:\n",
+    "                    path[i][j] == 1\n",
     "                path[i][j] = path[i-1][j] + path[i][j-1]\n",
     "        return path[-1][-1]"
    ]
